[gd_scene load_steps=23 format=2]

[ext_resource path="res://platformer-p15-assets/more fonts/KiriFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://font/19076.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Game_Assets/soundsandmusic/sounds/winsquare-6993.ogg" type="AudioStream" id=4]
[ext_resource path="res://font/UbuntuMono-RI.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Game_over_HUD.gd" type="Script" id=6]
[ext_resource path="res://coin_symbol.png" type="Texture" id=7]
[ext_resource path="res://layers/glacial/background_glacial_mountains.png" type="Texture" id=8]
[ext_resource path="res://YouWin.gd" type="Script" id=9]
[ext_resource path="res://layers/Parallax Forest Background - Blue/05_Particles.png" type="Texture" id=10]
[ext_resource path="res://Stars_hud.gd" type="Script" id=11]
[ext_resource path="res://extras/G22-HUD-Hearts/hud_star_empty.png" type="Texture" id=12]
[ext_resource path="res://extras/G22-HUD-Hearts/hud_star_full.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 150
outline_size = 5
outline_color = Color( 0.2, 0.415686, 0.87451, 1 )
extra_spacing_top = 10
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.466667, 0.537255, 0.501961, 0.721569 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.466667, 0.537255, 0.501961, 0.654902 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=8]
size = 70
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0.188235 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="YouWin" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -913.0
margin_top = -609.0
margin_right = 2167.0
margin_bottom = 1289.0
color = Color( 0.337255, 0.905882, 0.827451, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="BackgroundGlacialMountains" type="Sprite" parent="."]
position = Vector2( 599, 300 )
scale = Vector2( 3.11979, 2.77778 )
texture = ExtResource( 8 )

[node name="05Particles" type="Sprite" parent="."]
position = Vector2( 243.5, 226 )
scale = Vector2( 1.08073, 1 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="."]
margin_left = 176.0
margin_top = -2.0
margin_right = 760.0
margin_bottom = 175.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.741176, 0.423529, 0.423529, 1 )
custom_colors/font_color_shadow = Color( 0.309804, 0.686275, 0.313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "YOU WIN"

[node name="Panel" type="Panel" parent="."]
margin_left = 244.0
margin_top = 287.0
margin_right = 768.0
margin_bottom = 574.0
theme = SubResource( 2 )
custom_styles/panel = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 354.0
margin_top = 324.0
margin_right = 664.0
margin_bottom = 538.0
custom_constants/separation = 20

[node name="Restart1" type="Button" parent="VBoxContainer"]
margin_right = 310.0
margin_bottom = 58.0
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0.839216, 0.807843, 0.0470588, 1 )
custom_colors/font_color = Color( 0.321569, 0.909804, 0.92549, 1 )
custom_colors/font_color_hover = Color( 0.270588, 0.741176, 0.00392157, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.466667, 0.835294, 1 )
custom_fonts/font = SubResource( 4 )
text = "RESTART"
flat = true

[node name="NextLevel" type="Button" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 310.0
margin_bottom = 136.0
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0.839216, 0.807843, 0.0470588, 1 )
custom_colors/font_color = Color( 0.321569, 0.909804, 0.92549, 1 )
custom_colors/font_color_hover = Color( 0.270588, 0.741176, 0.00392157, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.466667, 0.835294, 1 )
custom_fonts/font = SubResource( 5 )
shortcut_in_tooltip = false
text = "NEXT LEVEL"
flat = true

[node name="MainMenu" type="Button" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 310.0
margin_bottom = 214.0
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0.839216, 0.807843, 0.0470588, 1 )
custom_colors/font_color = Color( 0.321569, 0.909804, 0.92549, 1 )
custom_colors/font_color_hover = Color( 0.270588, 0.741176, 0.00392157, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.466667, 0.835294, 1 )
custom_fonts/font = SubResource( 6 )
text = "MAIN MENU"
flat = true

[node name="You_Win_HUD" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="You_Win_HUD"]
margin_left = 721.0
margin_top = 14.0
margin_right = 1017.0
margin_bottom = 90.0
custom_styles/panel = SubResource( 7 )

[node name="TextureRect" type="TextureRect" parent="You_Win_HUD"]
margin_left = 730.0
margin_top = 18.0
margin_right = 800.0
margin_bottom = 84.0
texture = ExtResource( 7 )
expand = true

[node name="=" type="Label" parent="You_Win_HUD"]
margin_left = 817.0
margin_top = 9.0
margin_right = 856.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0.988235, 0.72549, 0.0352941, 1 )
custom_fonts/font = SubResource( 8 )
text = "="

[node name="Coins" type="Label" parent="You_Win_HUD"]
margin_left = 877.0
margin_top = 12.0
margin_right = 982.0
margin_bottom = 83.0
custom_colors/font_color = Color( 0.988235, 0.72549, 0.0352941, 1 )
custom_fonts/font = SubResource( 9 )
text = "00"
valign = 1

[node name="win_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="Stars_hud" type="CanvasLayer" parent="."]
script = ExtResource( 11 )

[node name="Panel_Stars" type="Panel" parent="Stars_hud"]
margin_left = 313.0
margin_top = 156.0
margin_right = 495.0
margin_bottom = 211.0
rect_scale = Vector2( 2, 2 )
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="StarsEmpty" type="TextureRect" parent="Stars_hud"]
margin_left = 329.0
margin_top = 156.0
margin_right = 539.0
margin_bottom = 226.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 12 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_group_": true
}

[node name="StarsFull" type="TextureRect" parent="Stars_hud"]
margin_left = 327.0
margin_top = 160.0
margin_right = 537.0
margin_bottom = 230.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_group_": true
}

[connection signal="pressed" from="VBoxContainer/Restart1" to="." method="_on_Restart1_pressed"]
[connection signal="pressed" from="VBoxContainer/NextLevel" to="." method="_on_NextLevel_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
